Fixed social buttons url on cases page.

--- a/app/views/pages/cases.html.erb
+++ b/app/views/pages/cases.html.erb
@@ -33,11 +33,11 @@
         <p><em>What would we need to generate a synapse planetary and take the next step in human sustainable evolution?</em></p>
       </div>
       <p class="social-buttons">
-        <a href="https://twitter.com/intent/tweet?url=/cases#road-to-planetary-synapse#&text=Road%20to%20Planetary%20Synapse&via=OD4D"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
+        <a href="https://twitter.com/intent/tweet?url=<%=request.original_url%>#road-to-planetary-synapse&text=Road%20to%20Planetary%20Synapse&via=OD4D"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
         &nbsp;
-        <a href="http://www.linkedin.com/shareArticle?mini=true&url=#road-to-planetary-synapse/&title=Road%20to%20Planetary%20Synapse&source=OD4D.org"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
+        <a href="http://www.linkedin.com/shareArticle?mini=true&url=<%=request.original_url%>#road-to-planetary-synapse/&title=Road%20to%20Planetary%20Synapse&source=OD4D.org"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
         &nbsp;
-        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url=#road-to-planetary-synapse"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
+        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url=<%=request.original_url%>#road-to-planetary-synapse"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
       </p>
     </article>
 
@@ -66,11 +66,11 @@
         </p>
       </div>
       <p class="social-buttons">
-        <a href="https://twitter.com/intent/tweet?url=#developing-latin-america-2012/&text=Developing%20Latin%20America%202012&via=OD4D"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
+        <a href="https://twitter.com/intent/tweet?url=<%=request.original_url%>#developing-latin-america-2012/&text=Developing%20Latin%20America%202012&via=OD4D"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
         &nbsp;
-        <a href="http://www.linkedin.com/shareArticle?mini=true&url=#developing-latin-america-2012/&title=Developing%20Latin%20America%202012&source=OD4D.org"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
+        <a href="http://www.linkedin.com/shareArticle?mini=true&url=<%=request.original_url%>#developing-latin-america-2012/&title=Developing%20Latin%20America%202012&source=OD4D.org"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
         &nbsp;
-        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url=#developing-latin-america-2012"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
+        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url=<%=request.original_url%>#developing-latin-america-2012"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
       </p>
     </article>
 
@@ -101,11 +101,11 @@
         </p>
       </div>
       <p class="social-buttons">
-        <a href="https://twitter.com/intent/tweet?url=/#open-311/&text=Open%20311&via=OD4D"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
+        <a href="https://twitter.com/intent/tweet?url=<%=request.original_url%>#open-311/&text=Open%20311&via=OD4D"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
         &nbsp;
-        <a href="http://www.linkedin.com/shareArticle?mini=true&url=#open-311/&title=Open%20311&source=OD4D.org"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
+        <a href="http://www.linkedin.com/shareArticle?mini=true&url=<%=request.original_url%>#open-311/&title=Open%20311&source=OD4D.org"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
         &nbsp;
-        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url=#open-311"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
+        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url=<%=request.original_url%>#open-311"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
       </p>
     </article>
 
@@ -139,11 +139,11 @@
         </p>
       </div>
       <p class="social-buttons">
-        <a href="https://twitter.com/intent/tweet?url=/#brazilian-open-data-portal/&text=Brazilian%20Open%20Data%20Portal&via=OD4D"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
+        <a href="https://twitter.com/intent/tweet?url=<%=request.original_url%>#brazilian-open-data-portal/&text=Brazilian%20Open%20Data%20Portal&via=OD4D"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
         &nbsp;
-        <a href="http://www.linkedin.com/shareArticle?mini=true&url=#brazilian-open-data-portal/&title=Brazilian%20Open%20Data%20Portal&source=OD4D.org"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
+        <a href="http://www.linkedin.com/shareArticle?mini=true&url=<%=request.original_url%>#brazilian-open-data-portal/&title=Brazilian%20Open%20Data%20Portal&source=OD4D.org"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
         &nbsp;
-        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url=#brazilian-open-data-portal"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
+        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url=<%=request.original_url%>#brazilian-open-data-portal"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
       </p>
     </article>
 
@@ -178,11 +178,11 @@
         </p>
       </div>
       <p class="social-buttons">
-        <a href="https://twitter.com/intent/tweet?url=/#apps-for-democracy/&text=Apps%20for%20Democracy&via=OD4D"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
+        <a href="https://twitter.com/intent/tweet?url=/<%=request.original_url%>#apps-for-democracy/&text=Apps%20for%20Democracy&via=OD4D"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
         &nbsp;
-        <a href="http://www.linkedin.com/shareArticle?mini=true&url=#apps-for-democracy/&title=Apps%20for%20Democracy&source=OD4D.org"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
+        <a href="http://www.linkedin.com/shareArticle?mini=true&url=<%=request.original_url%>#apps-for-democracy/&title=Apps%20for%20Democracy&source=OD4D.org"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
         &nbsp;
-        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url=#apps-for-democracy"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
+        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url=<%=request.original_url%>#apps-for-democracy"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
       </p>
     </article>
   </section>
