--- a/app/assets/stylesheets/od4d.css
+++ b/app/assets/stylesheets/od4d.css
@@ -144,7 +144,7 @@ footer a {
 .main {
 	background-color: #ffffff;
 	max-width: 61em;
-	padding: 30px 15px 0px 15px;
+	padding: 20px 15px 0px 15px;
 	margin: 0px auto;
 	position: relative;
 
@@ -309,6 +309,32 @@ p.copyright {float: left;}
 /*
 START ARTICLE STYLES
 */
+
+h3.Feeds {
+	font-size: 1.2em;
+	font-family: 'Exo 2', sans-serif;
+	font-weight: 600;
+	color: #666666;
+	line-height: 1.2em;
+	padding: 0px;
+	margin-top: 0px
+}
+
+h3.Feeds a {
+  color: #666666;
+}
+
+.social-buttons {
+	display: inline-block; 
+	position: relative;
+	margin: 10px;
+	vertical-align: middle;
+	text-align: right;
+	width: 100%;
+	margin: 0px;
+	padding: 0px;
+}
+
 article.rss {
 	border-bottom-style: solid;
     border-width: 1px;
@@ -332,7 +358,8 @@ p.category {
 	font-family: 'Exo 2', sans-serif;
 	font-weight: 400;
 	color: #666666;
-	margin: 15px 0px 0px 0px;
+	margin: 0px 0px 0px 0px;
+	text-transform: uppercase;
 }
 
 p.summary {
@@ -362,12 +389,6 @@ p.date
 	color: #666666;
 	margin: 3px 0px 0px 0px;
 	line-height: 1.3em;
-}
-
-.social-buttons {
-	margin: 20;
-	background-color: red;
-
 }
 
 .feeds {
