--- a/app/assets/stylesheets/od4d.css
+++ b/app/assets/stylesheets/od4d.css
@@ -37,13 +37,8 @@ ol {
 }
 
 .logo {
-	max-width: 100%;
-	overflow: auto;
-	position: relative;
 	display: inline-block;
-	z-index: 400;
 	vertical-align: middle;
-	margin-left: 15px;
 }
 
 .contribute {
@@ -66,13 +61,6 @@ ol {
 }
 
 @media screen and (max-width: 62em ) {
-.logo {
-	width: 281px;
-	display: block;
-	vertical-align: middle;
-	margin: 0px auto;
-}
-
 .center-menu {
 	width: 100%;
 	display: block;
@@ -92,22 +80,21 @@ ol {
 }
 
 .center-align	{
-	max-width: 68em;
+	max-width: 61em;
 	margin: 0px auto;
 	position: relative;
 }
 
 header {
-	background-color: #444444;
+	background-color: #333333;
     padding: 15px;
-
 }
 
 header a {
-	font-size: 0.875em;
-	color: #cccccc;
-	font-weight: 500;
-	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 0.875em !important;
+	color: #cccccc !important;
+	font-weight: 500 !important;
+	font-family: 'Roboto Condensed', sans-serif !important;
 }
 
 header a:hover {
@@ -246,7 +233,31 @@ p.copyright {
 	font-size: 14px;
 }
 
-@media screen and (max-width: 35em ) {
+.div-nav-menu {
+	display: inline-block;
+	float: right;
+	line-height: 105px;
+}
+
+.nav-alignment {
+	display: inline-block;
+	vertical-align: middle;
+	line-height: 105px;
+}
+
+@media screen and (max-width: 38em ) {
+
+.div-nav-menu {
+	display: block;
+	float: none;
+}
+
+.nav-alignment {
+  	line-height: 0;
+  	float: none;
+  	display: block;
+}
+
 p.footbar {float: left;}
 p.copyright {float: left;}
 
