Fixed title and meta property on glossary page. Fixed meta property on index page.

--- a/app/views/pages/glossary.html.erb
+++ b/app/views/pages/glossary.html.erb
@@ -1,15 +1,15 @@
 
 <% content_for :head do %>
-  <title>Open Data for Development - About</title>
+  <title>Open Data for Development - Glossary</title>
 <% end %>
 
 <article class="main" resource="#about" typeof="schema:Article" role="main">
-  <h1 property="schema:headline">About the Project</h1>
+  <h1 property="schema:headline">Glossary</h1>
   <meta property="schema:datePublished" content="2014-06-20"/>
   <meta property="schema:inLanguage" content="en-US"/>
   <meta property="schema:copyrightHolder" content="W3C"/>
   <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
-  <meta property="schema:keywords" content="about;od4d"/>
+  <meta property="schema:keywords" content="glossary;od4d"/>
   <section resource="#glossary">
     <ul>
       <li><em><a href="#onthology">Onthology</a></em><p>Onthologies are a set of vocabularies that are able to describe an subject area. For instance an Onthology of Intelectual property, might include vocabularies to describe any form of text, media, etc. Article, Video, Audio, are examples of vocabularies that could be inside a Onthology called "Intelectual Property Onthology".</p></li>
