--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,7 +8,7 @@
     <meta property="schema:inLanguage" content="English"/>
     <meta property="schema:copyrightHolder" content="W3C"/>
     <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
-    <meta property="schema:keywords" content="about;od4d"/>
+    <meta property="schema:keywords" content="index;od4d"/>
     <section class="home-left">
       <h1><a href="/about">Understand Open Data</a></h1>
       <section id="Video" resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
