--- a/app/views/pages/glossary.html.erb
+++ b/app/views/pages/glossary.html.erb
@@ -10,10 +10,24 @@
   <meta property="schema:copyrightHolder" content="W3C"/>
   <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
   <meta property="schema:keywords" content="glossary;od4d"/>
+
   <section resource="#glossary">
-    <ul>
-      <li><em><a href="#onthology">Onthology</a></em><p>Onthologies are a set of vocabularies that are able to describe an subject area. For instance an Onthology of Intelectual property, might include vocabularies to describe any form of text, media, etc. Article, Video, Audio, are examples of vocabularies that could be inside a Onthology called "Intelectual Property Onthology".</p></li>
-      <li><em><a href="#vocabulary">Vocabulary</a><p>Vocabularies are predefined terms for different Objects in certain subject areas, with this predefined vocabularies, applications/tools/other web sites that makes use of this data can better understand it when common and popular vocabularies are used.</p></em> </li>
-    </ul>
+
+    <p><em><a href="#onthology">Onthology</a></em><br>Onthologies are a set of vocabularies that are able to describe an subject area. For instance an Onthology of Intelectual property, might include vocabularies to describe any form of text, media, etc. Article, Video, Audio, are examples of vocabularies that could be inside a Onthology called "Intelectual Property Onthology".</p>
+
+    <p><em><a href="#vocabulary">Vocabulary</a></em><br>Vocabularies are predefined terms for different Objects in certain subject areas, with this predefined vocabularies, applications/tools/other web sites that makes use of this data can better understand it when common and popular vocabularies are used.</p>
+    
+    <p><em><a href="#copyright">Copyright</a></em><br>Moral right, irrevocable and inalienable. It is an exclusive right of exploitation that a person has over its literary, artistic and scientific creations.</p>
+    
+    <p><em><a href="#license">License</a></em><br>Information about the copyright of the dataset. Using a license is essential to provide clarity and certainty to users about the possible uses of the information contained in the datasets. For purposes of the release of the datasets and to facilitate their reuse, the following basic conditions must be respected: a) keep the original sense of the information b) cite the source of the information, c) publish when the information was updated the last time.</p>
+
+    <p><em><a href="#uri">URI (Uniform Resource Identifier):</a></em><br>It is a short string that uniquely identifies a resource (service, page, document, email, encyclopedia, etc.). Usually these resources are accessible on a network or system. The URI can be Uniform Resource Locators (URLs), Uniform Resource Name (URN), or both (URL + URN).</p>
+
+    
+    <p><em><a href="#rdfa">RDFa</a></em> (Resource Description Framework-in-attributes):<br>Information about the copyright of the dataset. Using a license is essential to provide clarity and certainty to users about the possible uses of the information contained in the datasets. For purposes of the release of the datasets and to facilitate their reuse, the following basic conditions must be respected: a) keep the original sense of the information b) cite the source of the information, c) publish when the information was updated the last time.</p>
+   
+
+    <p><em><a href="#semantic">Semantic</a></em><br>Semantic: Particular way of inferring facts or ideas from a word or phrase.</p>
+
   </section>
 </article>
