--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,25 +8,26 @@
       <% @articles.each do |article| %>
         <article id="<%=article.slug%>" class="feeds rss" resource="<%=article.url%>" typeof="schema:Article">
       		<h3 class="Feeds" property="schema:headline"><a href=<%=article.url%>><%= article.title %></a></h3>
-      		<p class="author" property="schema:author">Author: <%= article.author %></p>
+      		<%if !article.author.blank? then%>
+            <p class="author" property="schema:author">Author: <%= article.author %></p>
+          <%end%>
+          <%if !article.datePublished.blank? then%>
+            <p class="date" property="schema:datePublished" content="<%=article.datePublished.iso8601%>">Date: <%=article.datePublished.strftime("%m/%d/%Y") %></p>
+          <%end%>
           <section class="social-buttons">
             <a href="<%=article.share_twitter%>"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
-         
+
             <a href="<%=article.share_linkedin%>"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
-          
+
             <a href="<%=article.share_googleplus%>"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
           </section>
       		<p class="category" property="schema:articleSection"> <%= article.articleSection %></p>
-          <%if article.summary.blank?%>
-            <p class="summary" property="schema:description"> <%= article.description %></p>
-          <%else%>
+          <%if !article.summary.blank? %>
             <p class="summary" property="schema:summary"> <%= article.summary%></p>
-          <%end%>
-          <%if !article.datePublished.nil? then%>
-            <p class="date" property="schema:datePublished" content="<%=article.datePublished.iso8601%>">Date: <%=article.datePublished.strftime("%m/%d/%Y") %></p>
+          <%elsif !article.description.blank? %>
+            <p class="summary" property="schema:description"> <%= article.description %></p>
           <%end%>
           <a property="schema:url" href=<%=article.url%>><button tabindex="-1" class="button">Read More</button></a>
-          
       	</article>
       <% end %>
   </section>
