--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,26 +32,26 @@
 
           <section class="top-bar-section">
             <ul class="right">
-                <li><a href="/about">ABOUT THE PROJECT</a></li> 
+                <li><a href="/about">ABOUT THE PROJECT</a></li>
                 <li><a href="/articles">CONNECTED NETWORK</a></li>
-                <li><a href="/cases">PRACTICAL CASES</a></li>
+                <li><a href="/partners">PARTNERS</a></li>
                 <li class="has-dropdown">
                   <a href="#">LEARN</a>
                   <ul class="dropdown">
-                    <li><a href="/how-to-integrate">CONNECT WITH US</a></li>    
+                    <li><a href="/how-to-integrate">CONNECT WITH US</a></li>
                     <li><a href="/how-to-create-a-semantic-page">CREATE A SEMANTIC PAGE</a></li>
                     <li><a href="/how-to-new">CREATE A SEMANTIC PAGE (NEW)</a></li>
-                    <li><a href="/how-to-integrate">CONNECT WITH US</a></li> 
+                    <li><a href="/how-to-integrate">CONNECT WITH US</a></li>
                     <li><a href="/glossary">GLOSSARY</a></li>
                   </ul>
                 </li>
                 <li><a href="https://github.com/W3CBrasil/OD4D" target="blank"><%= image_tag("github32.png", :alt => "contribute on github") %></a></li>
             </ul>
-            
+
           </section>
         </nav>
       </div>
-        
+
          </section>
   </header>
 
