--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -14,13 +14,15 @@
           <%if !article.datePublished.blank? then%>
             <p class="date" property="schema:datePublished" content="<%=article.datePublished.iso8601%>">Date: <%=article.datePublished.strftime("%m/%d/%Y") %></p>
           <%end%>
-          <section class="social-buttons">
+          <div class="social-buttons">
             <a href="<%=article.share_twitter%>"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
-
+            &nbsp;
             <a href="<%=article.share_linkedin%>"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
-
+            &nbsp;
             <a href="<%=article.share_googleplus%>"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
-          </section>
+          </div>
+
+
       		<p class="category" property="schema:articleSection"> <%= article.articleSection %></p>
           <%if !article.summary.blank? %>
             <p class="summary" property="schema:summary"> <%= article.summary%></p>
