--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -23,7 +23,7 @@
 
           <p>The availability of data and can bring greater recognition of the demands of the citizen and transform the way governments do business and public policies. This can be a tool for promoting social equality and effectiveness of public administration.</p>
           
-          <p>The research project on the impact and potential of Open Data to Public Policy in Latin America and the Caribbean took place for two years - July 2011 to July 2013 - and was conducted by the W3C Brazil Office and the Economic Commission for Latin America and the Caribbean (<a href="http://www.eclac.org/"><b>ECLAC</b></a>), of the United Nations, and funded by the Canada's International Development Research Centre (<a href="http://www.idrc.ca/EN/Pages/default.aspx"><b>IDRC</b></a>).</p>
+          <p>The research project on the impact and potential of Open Data to Public Policy in Latin America and the Caribbean took place for two years - July 2011 to July 2013 - and was conducted by the W3C Brazil Office and the Economic Commission for Latin America and the Caribbean (<a href="http://www.eclac.org/"><em>ECLAC</em></a>), of the United Nations, and funded by the Canada's International Development Research Centre (<a href="http://www.idrc.ca/EN/Pages/default.aspx"><em>IDRC</em></a>).</p>
 
           <p>The main goal was to contribute for the development of Open Data strategies that lead to accountability of public policies, supporting new analysis, creating new services and and fostering an equitable development of key industries, promoting a more inclusive knowledge economy in Latin America and the Caribbean. To achieve this goal, the potential of Open Data in public policy was investigated in 3 areas: transparency, new services and equitable development.</p>
           <p>Strategies were adopted to sensitize governments and civil society regarding the usefulness and potential of Open Data to public policy. The research emerged that the use of Open Data can be a large contribution to the development of local economies.</p>
@@ -76,7 +76,7 @@
           Fostering the development of new data opening initiatives in the region, with a long-term and sustainable perspective.
           </li>
         </ul>
-        <p>Check out the whole OD4D proposal (in English): <a href="http://www.od4d.org/wp-content/uploads/2012/10/Open-Data-Projet-Proposal-29-de-marzo-31.pdf"><b>Open-Data-Projet-Proposal</b></a> - PDF (616KB)</p>
+        <p>Check out the whole OD4D proposal (in English): <a href="http://www.od4d.org/wp-content/uploads/2012/10/Open-Data-Projet-Proposal-29-de-marzo-31.pdf"><em>Open-Data-Projet-Proposal</em></a> - PDF (616KB)</p>
       </section>
     </section>
 
