Renaming old How to Create a Semantic Page to Introduction to RDF and RDFa.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,8 +39,8 @@
                   <a href="#">LEARN</a>
                   <ul class="dropdown">
                     <li><a href="/how-to-integrate">CONNECT WITH US</a></li>
+                    <li><a href="/introduction-to-rdf-and-rdfa">INTRODUCTION RDF AND RDFa</a></li>
                     <li><a href="/how-to-create-a-semantic-page">CREATE A SEMANTIC PAGE</a></li>
-                    <li><a href="/how-to-new">CREATE A SEMANTIC PAGE (NEW)</a></li>
                     <li><a href="/glossary">GLOSSARY</a></li>
                   </ul>
                 </li>
