--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,16 +32,16 @@
 
           <section class="top-bar-section">
             <ul class="right">
-                <li><a href="/about">ABOUT THE PROJECT</a></li>
-                <li><a href="/articles">CONNECTED NETWORK</a></li>
-                <li><a href="/partners">PARTNERS</a></li>
+                <li><%= link_to("ABOUT THE PROJECT", controller: "pages", action: "about") %></li>
+                <li><%= link_to("CONNECTED NETWORK", controller: "articles") %></li>
+                <li><%= link_to("PARTNERS", controller: "partners") %></li>
                 <li class="has-dropdown">
                   <a href="#">LEARN</a>
                   <ul class="dropdown">
-                    <li><a href="/how-to-integrate">CONNECT WITH US</a></li>
-                    <li><a href="/introduction-to-rdf-and-rdfa">INTRODUCTION RDF AND RDFa</a></li>
-                    <li><a href="/how-to-create-a-semantic-page">CREATE A SEMANTIC PAGE</a></li>
-                    <li><a href="/glossary">GLOSSARY</a></li>
+                    <li><%= link_to("CONNECT WITH US", controller: "learn", action: "how_to_integrate_with_od4d") %></li>
+                    <li><%= link_to("INTRODUCTION RDF AND RDFa", controller: "learn", action: "introduction_to_rdf_and_rdfa") %></li>
+                    <li><%= link_to("CREATE A SEMANTIC PAGE", controller: "learn", action: "how_to_create_a_semantic_page") %></li>
+                    <li><%= link_to("GLOSSARY", controller: "learn", action: "glossary") %></li>
                   </ul>
                 </li>
                 <li><a href="https://github.com/W3CBrasil/OD4D" target="blank"><%= image_tag("github32.png", :alt => "contribute on github") %></a></li>
