--- a/app/views/learn/how_to_create_a_semantic_page.html.erb
+++ b/app/views/learn/how_to_create_a_semantic_page.html.erb
@@ -4,7 +4,7 @@
   <title>Open Data for Development - How to create a semantic page</title>
 <% end %>
 
-  <article class="main" resource="#how-to-create-a-semantic-page" typeof="schema:Article">
+  <article class="main" resource="<%= request.original_url %>" typeof="schema:Article">
     <h1 property="schema:headline">How to create a semantic page</h1>
     <meta property="schema:datePublished" content="2014-07-08"/>
     <meta property="schema:wordCount" content="503"/>
