--- a/app/views/learn/how_to_integrate_with_od4d.html.erb
+++ b/app/views/learn/how_to_integrate_with_od4d.html.erb
@@ -2,7 +2,7 @@
   <title>Open Data for Development - How to integrate</title>
 <% end %>
 
-<article class="main" resource="#how-to-integrate" typeof="schema:Article">
+<article class="main" resource="<%= request.original_url %>" typeof="schema:Article">
   <h1 property="schema:headline">How to integrate your site with OD4D network</h1>
   <meta property="schema:datePublished" content="2014-07-09"/>
   <meta property="schema:inLanguage" content="en-US"/>
