Removed semantic tags from home since it doens't make sense to have there, and fixed some links.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,17 +2,10 @@
   <title>Open Data for Development</title>
 <% end %>
 
-  <section resource="#about" typeof="schema:Article" role="main" class="main">
-    <meta property="schema:datePublished" content="2014-06-20"/>
-    <meta property="schema:wordCount" content="503"/>
-    <meta property="schema:inLanguage" content="English"/>
-    <meta property="schema:copyrightHolder" content="W3C"/>
-    <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
-    <meta property="schema:keywords" content="index;od4d"/>
+  <section role="main" class="main">
     <section class="home-left">
       <h1><a href="/about">Understand Open Data</a></h1>
-      <section id="Video" resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
-        <meta property="schema:name" content="Open Government Data and OD4D "/>
+      <section id="Video" resource="/about/#od4d-about-video">
         <div class="video-container">
           <iframe property="schema:embedUrl" src="//player.vimeo.com/video/69632849"> </iframe>
         </div>
@@ -28,12 +21,12 @@
     </section>
     <aside class="home-right">
       <h1>Get Started</h1>
-      <h2><a href="/how-to-create-a-semantic-page">How to create a semantic page</a></h2>
+      <h2><a href="/learn/how-to-create-a-semantic-page">How to create a semantic page</a></h2>
       <p>Understanting RDF concept </br>
          RDFa and RDF: WTF? </br>
          Examples
       </p>
-      <h2><a href="/how-to-integrate">How to connect your site with us</a></h2>
+      <h2><a href="/learn/how-to-integrate">How to connect your site with us</a></h2>
       <p>Understanting how to connect </br>
          Read our terms and conditions </br>
          Examples
