--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,7 +9,7 @@
     <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
     <meta property="schema:keywords" content="about;od4d"/>
     <section id="Video">
-      <p resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
+      <p id="od4d-about-video" resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
         <meta property="schema:name" content="Open Government Data and OD4D "/>
         <div class="video-container">
           <iframe property="schema:embedUrl" src="//player.vimeo.com/video/69632849"> </iframe>
@@ -22,7 +22,7 @@
           <p>The release of information in open, accessible and structured formats has the potential to substantially improve transparency and accountability regarding the development and implementation of public policies, as well as opening doors for wide participation of civil society in the process.</p>
 
           <p>The availability of data and can bring greater recognition of the demands of the citizen and transform the way governments do business and public policies. This can be a tool for promoting social equality and effectiveness of public administration.</p>
-          
+
           <p>The research project on the impact and potential of Open Data to Public Policy in Latin America and the Caribbean took place for two years - July 2011 to July 2013 - and was conducted by the W3C Brazil Office and the Economic Commission for Latin America and the Caribbean (<a href="http://www.eclac.org/"><em>ECLAC</em></a>), of the United Nations, and funded by the Canada's International Development Research Centre (<a href="http://www.idrc.ca/EN/Pages/default.aspx"><em>IDRC</em></a>).</p>
 
           <p>The main goal was to contribute for the development of Open Data strategies that lead to accountability of public policies, supporting new analysis, creating new services and and fostering an equitable development of key industries, promoting a more inclusive knowledge economy in Latin America and the Caribbean. To achieve this goal, the potential of Open Data in public policy was investigated in 3 areas: transparency, new services and equitable development.</p>
@@ -55,9 +55,9 @@
           <li>The od4d.org new platform will serve as connection among regional open data initiatives in Latin America, Africa, Asia and the Caribbean.</li>
           <li>The site will be a case of Open Data itself, transforming it's data in one open repository of knowledge, always respecting privacy guidelines.</li>
           <li>The new OD4D platform will bring a new experience for the user of the Open Data for Development Network. Through a multilingual website, we expect that it will connect people and foster the open data ecosystem.</li>
-          
 
- 
+
+
 
 
         </ul>
